# updns

./: .eslintrc.yml  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  index.js  package.json
.github/workflows/: ci.yml
config/: hosts
lib/: daemon.js  index.js  parse.js
src/: cli.rs  config.rs  lib.rs  logger.rs  main.rs  matcher.rs  watch.rs
test/: daemon.test.js  index.test.js  log.test.js
test_data/: config  other_hosts
tests/: lookup.rs
