[package]
name = "updns"
version = "0.1.3"
edition = "2018"

authors = ["wyhaya <wyhaya@gmail.com>"]
description = "DNS proxy tool"
homepage = "https://github.com/wyhaya/updns"
repository = "https://github.com/wyhaya/updns.git"
license = "MIT"
readme = "README.md"

keywords = [
    "dns",
    "dns-server",
    "dns-proxy",
    "udp"
]

[dependencies]
ace = "0.2.0"
dirs = "2.0.2"
futures = "0.3.4"
lazy_static = "1.4.0"
log = { version = "0.4.8", features = ["max_level_trace", "release_max_level_info"] }
regex = "1.3.6"
time = "0.1.42"
tokio = { version = "0.2.16", features = ["fs", "io-util",  "macros", "net", "stream", "time", "sync"] }
