[package]
name = "updns"
version = "0.1.4"
edition = "2018"

authors = ["wyhaya <wyhaya@gmail.com>"]
description = "DNS proxy tool"
homepage = "https://github.com/wyhaya/updns"
repository = "https://github.com/wyhaya/updns.git"
license = "MIT"
readme = "README.md"

keywords = [
    "dns",
    "dns-server",
    "dns-proxy",
    "udp"
]

[profile.release]
lto = true
codegen-units = 1
# strip = "symbols"

[dependencies]
clap = "2.33.3"
dirs = "3.0.1"
futures-util = "0.3.13"
lazy_static = "1.4.0"
logs = "0.3.2"
regex = "1.4.3"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time", "sync"] }
