[package]
name = "updns"
version = "0.1.6"
edition = "2021"

authors = ["wyhaya <wyhaya@gmail.com>"]
description = "DNS proxy tool"
homepage = "https://github.com/wyhaya/updns"
repository = "https://github.com/wyhaya/updns.git"
license = "MIT"
readme = "README.md"

keywords = [
    "dns",
    "dns-server",
    "dns-proxy",
    "udp"
]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
clap = "2.33.3"
dirs = "4.0.0"
futures-util = "0.3.21"
lazy_static = "1.4.0"
logs = "0.5.0"
regex = "1.5.5"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time", "sync"] }
